# sedum

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc.json  .worktreeinclude  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  flake.nix  pyproject.toml
.agents/: AGENTS.md
.claude/: settings.json
.claude/rules/: config.md  core.md  testing.md
.github/workflows/: ci.yml
design/: Miku Wiki.dc.html  README.md  preview.html
design/static/: miku.css  miku.js
design/templates/: _shell.html  new_page.html  page_edit.html  page_view.html  search.html  tags.html
docs/: api_design_spec.md  architecture.md  dataflow.md  dataflow_v2.md  dataflow_v3.md  decisions.md  frontend_design.md  frontend_rework_plan.md  indexer_scalability_plan.md  lazy_sidebar_plan.md  plan.md  product.md  review_and_simulation.md  roadmap_2.0.md  rocksdb_and_sync_design.md  rocksdb_postgres_hybrid_design.md  setup.md  todo.md  valkey_caching_plan.md  watcher_and_queue_plan.md
docs/adr/: 0001-fts-english.md  0002-markdown-wikilink-grammar.md  0003-write-conflicts-auth.md  0004-rename-delete-assets.md  0005-nav-explorer.md  0006-watcher-at-scale.md  0007-frontend-rendering.md  0008-theme-switching.md  0009-pin-tailwind-over-mui.md  README.md
docs/lessons/: pitfalls.md
examples/: axum_demo.rs  pg_demo.rs  sqlx-postgres.rs
migrations/: 0001_init_index.sql
miku/: Changelog.md  Features.md  Index.md  Sandbox.md  Usage.md
scripts/: index_scale_test.py
src/: build.rs  indexer.rs  lib.rs  main.rs  markdown.rs
src/fixtures/indexer/: nul_invalid.md
src/model/: mod.rs
src/service/: mod.rs
src/templates/: _nav_macro.html  base.html  conflict.html  edit.html  folder.html  nav_children.html  page.html  search.html  tag.html  tags.html
static/: index.html  miku.css  miku.js
static/css/: index.css
