[package]
name = "sedum"
version = "0.0.1"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/sedum"

[dependencies]
anyhow = "1"
thiserror = "1"

async-trait = "0.1"
futures = "0.3"
chrono = "0.4"

# possible features: json, cluster, tokio-rustls-comp
redis = { version = "0.25", features = ["json", "tokio-comp"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }

# raft
openraft = "0.9"

bytes = "1"

http = "1"
http-body = "1"
http-body-util = "0.1"

h2 = "0.4"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
axum = { version = "0.7", features = ["default", "ws", "multipart"] }
axum-ctx = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# for logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# grpc & protobuf
prost = "0.13"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[registries.crates-io]
protocol = "sparse"
