[package]
name = "sedum"
version = "0.0.1"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/sedum"

[dependencies]
anyhow = "1"
thiserror = "2"

# async runtime
tokio = { version = "1", features = ["full"] }

# web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
minijinja = { version = "2", features = ["loader"] }

# postgres index cache (disposable; source of truth is sedum/**/*.md)
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "macros",
  "migrate",
] }

# markdown rendering (comrak: native wikilinks + GitHub alerts + GFM)
comrak = "0.52"

# filesystem watcher (background indexer)
notify = "7"

# serialization + time
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# hashing
sha2 = "0.10"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
unused_async = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1

[registries.crates-io]
protocol = "sparse"
